--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vant": "^1.0.1",
     "vant-css": "^1.0.1",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.0"
+    "vue-router": "^3.0.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^8.1.0",
@@ -36,18 +38,21 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^3.0.6",
     "http-proxy-middleware": "^0.18.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.8.1",
+    "mockjs": "^1.0.1-beta3",
+    "node-sass": "^4.9.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "^2.0.0",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.0.3",
+    "semver": "^5.3.0",
+    "shelljs": "^0.8.1",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.2.1",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "3.11.0",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^2.0.6",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
