--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vant-css": "^1.0.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.0",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
